samples/_failures_safe/1761472277_92e0f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_008deda9.c: In function ‘main’:
./samples/SAFE/__tmp_008deda9.c:160:13: error: ‘run’ undeclared (first use in this function)
  160 |             run
      |             ^~~
./samples/SAFE/__tmp_008deda9.c:160:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_008deda9.c:160:16: error: expected ‘;’ at end of input
  160 |             run
      |                ^
      |                ;
./samples/SAFE/__tmp_008deda9.c:160:13: error: expected declaration or statement at end of input
  160 |             run
      |             ^~~
./samples/SAFE/__tmp_008deda9.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_008deda9.c:160:13: error: expected declaration or statement at end of input
